test/sema/negative-uint64-literal.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:16: error: -42 is out of range for type 'uint64'
    uint64 a = -42
}
